[gd_scene load_steps=5 format=2]

[ext_resource path="res://Items/gold_plaster_cube.tres" type="Material" id=1]
[ext_resource path="res://Items/box.gd" type="Script" id=2]
[ext_resource path="res://Items/BoxAudioPlayer.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.25, 0.25 )

[node name="Gold Box" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
collision_layer = 3
contacts_reported = 2
contact_monitor = true
script = ExtResource( 2 )
box_type = 0

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="CSGBox" type="CSGBox" parent="."]
width = 0.5
height = 0.5
depth = 0.5
material = ExtResource( 1 )

[node name="BoxAudioPlayer" parent="." instance=ExtResource( 3 )]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
